--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="sv">
 
 <head>
-    <title>Laboration 3, Memory (jw22fd)</title>
+    <title>Q:te Memory</title>
     <meta http-equiv="content-type" content="text/html;charset=iso-8859-1"/>
 	<link rel="stylesheet" type="text/css" href="style.css" />
     <script type="text/javascript" src="memory.js"></script>
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <h1>Memory</h1>
+    <h1>Q:te Memory</h1>
     <div id="gameboard"></div>
 </body>
 
