--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
-   "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE HTML>
 
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="sv">
+<html>
 
 <head>
-    <title>Q:te Memory</title>
-    <meta http-equiv="content-type" content="text/html;charset=iso-8859-1"/>
+  <title>Q:te Memory</title>
+  <meta http-equiv="content-type" content="text/html;charset=iso-8859-1"/>
 	<link rel="stylesheet" type="text/css" href="style.css" />
-    <script type="text/javascript" src="memory.js"></script>
-    <script type="text/javascript" src="random.js"></script>
+  <script type="text/javascript" src="memory.js"></script>
+  <script type="text/javascript" src="random.js"></script>
+  <link href='http://fonts.googleapis.com/css?family=Oldenburg' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
