--- a/index.html
+++ b/index.html
@@ -4,15 +4,20 @@
 
 <head>
   <title>Q:te Memory</title>
-  <meta http-equiv="content-type" content="text/html;charset=iso-8859-1"/>
+  <meta charset=utf-8>
 	<link rel="stylesheet" type="text/css" href="style.css" />
   <script type="text/javascript" src="memory.js"></script>
   <script type="text/javascript" src="random.js"></script>
   <link href='http://fonts.googleapis.com/css?family=Oldenburg' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
 </head>
 
 <body>
-    <h1>Q:te Memory</h1>
+    <section>
+      <h1><a href="index.html"><span>Q</span>:te Memory</a></h1>
+      <p>Ett helt vanligt memoryspel: <br>Hitta alla par på så kort tid som möjligt.</p>
+      <p class="author">Av: Jenny Rydén <br>Bilder från <a href="http://www.sxc.hu/">stock.xchng</a></p>
+    </section>
     <div id="gameboard"></div>
 </body>
 
