Changed text content slightly

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <section id="info">
       <h1><a href="index.html"><span>Q</span>:te Memory</a></h1>
       <p>Ett helt vanligt memoryspel.<br>Hitta alla par på så få försök som möjligt.</p>
-      <p class="author">Av: Jenny Rydén <br>Bilder från <a href="http://www.sxc.hu/">stock.xchng</a></p>
+      <p class="author">Gjort i JavaScript av Jenny Rydén.</a></p>
     </section>
     <div id="gameboard"></div>
 </body>
